# metaflow-serverless

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
edge_function/: index.ts
src/metaflow_ephemeral/: cli.py  config.py  installer.py
src/metaflow_ephemeral/providers/: __init__.py  cloudflare_r2.py  registry.py  supabase.py
src/metaflow_ephemeral/sql/: loader.py  procedures.sql  schema.sql
src/metaflow_ephemeral/ui_proxy/: proxy.py
src/metaflow_serverless/: cli.py  config.py  installer.py
src/metaflow_serverless/providers/: __init__.py  backblaze_b2.py  base.py  cloud_run.py  cloudflare_r2.py  cockroachdb.py  neon.py  registry.py  render.py  supabase.py
src/metaflow_serverless/setup/: __init__.py  wizard.py
src/metaflow_serverless/sql/: loader.py  procedures.sql  schema.sql
src/metaflow_serverless/ui_proxy/: __init__.py  proxy.py
supabase/migrations/: 20260321004920_enable_rls.sql
tests/: conftest.py  test_config.py  test_installer.py  test_providers.py  test_registry.py  test_sql.py  test_supabase_compute_provision.py  test_supabase_db_provision.py  test_supabase_login.py  test_supabase_storage_provision.py  test_ui_proxy.py  test_wizard.py
