[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-ephemeral-service"
version = "0.1.0"
description = "Zero-infra Metaflow metadata service using serverless Postgres"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.scripts]
mf-setup = "metaflow_ephemeral.cli:setup_entrypoint"
mf-ui = "metaflow_ephemeral.cli:ui_entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/metaflow_ephemeral"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "respx>=0.21"]
