[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-serverless"
version = "0.2.1"
description = "Run the Metaflow metadata service on serverless Postgres — no always-on servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.scripts]
mf-setup = "metaflow_serverless.cli:setup_entrypoint"
mf-ui = "metaflow_serverless.cli:ui_entrypoint"

[tool.hatch.build]
exclude = [
    ".venv311",
    ".venv",
    "venv",
    ".metaflow",
    "supabase",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metaflow_serverless"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv311", ".venv", "venv", "supabase"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["metaflow_serverless"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/metaflow_serverless"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Many provider/installer paths require live CLI tools or network calls;
# raise this threshold as integration-level mocks improve.
fail_under = 40
